--- a/sbg_da.html
+++ b/sbg_da.html
@@ -62,9 +62,9 @@
 
             <div class="book">
                 <div class="video">
-                    <iframe src="videos/rhythms/sbgda_b.mp4" frameborder="0" loading="lazy"></iframe>
-                    <iframe src="https://www.youtube.com/embed/x6_YR7BLB9Y" frameborder="0" loading="lazy"></iframe>
-                    <iframe src="https://www.youtube.com/embed/rcxN0GZ7OJw?start=214" frameborder="0" loading="lazy"></iframe>
+                    <iframe src="https://www.youtube.com/embed/M7YpL4GijvA?si=smP5ozPLKWRx3NsM" frameborder="0" loading="lazy"></iframe>
+                    <iframe src="https://www.youtube.com/embed/HnwP3bTRT6s?si=IbLUE1KRbfqzPoRm" frameborder="0" loading="lazy"></iframe>
+                    <iframe src="https://www.youtube.com/embed/XErrtAADywY?si=i-18thHcFKDnEu7e" frameborder="0" loading="lazy"></iframe>
                 </div>
                 <div class="content">
                     <h2>São Bento Grande de Angola</h2>
