--- a/rhythms.html
+++ b/rhythms.html
@@ -62,9 +62,9 @@
 
             <div class="book">
                 <div class="video">
-                    <iframe src="videos/rhythms/angola_b.mp4" frameborder="0" loading="lazy"></iframe>
-                    <iframe src="videos/rhythms/angola_a.mp4" frameborder="0" loading="lazy"></iframe>
-                    <iframe src="videos/rhythms/angola_p.mp4" frameborder="0" loading="lazy"></iframe>
+                    <iframe src="vhttps://www.youtube.com/embed/-CjhkCFA7hI?si=xGML4QHfY0VqOsgC" frameborder="0" loading="lazy"></iframe>
+                    <iframe src="https://www.youtube.com/embed/EBpAWYlvwNQ?si=Ww3ZUa1g5sWFcaq5" frameborder="0" loading="lazy"></iframe>
+                    <iframe src="https://www.youtube.com/embed/ZwGESnLM2lU?si=mYnRBvQKaITfj9Co" frameborder="0" loading="lazy"></iframe>
                 </div>
                 <div class="content">
                     <h2>Angola</h2>
