--- a/sbp.html
+++ b/sbp.html
@@ -62,7 +62,7 @@
 
             <div class="book">
                 <div class="video">
-                    <iframe  width="400" height="150" src="videos/rhythms/sbp_b.mp4" frameborder="0" loading="lazy"></iframe>
+                    <iframe  width="400" height="150" src="https://www.youtube.com/embed/E9_Gw8dvzZM?si=b3yzIF_YKYg9fpvT" frameborder="0" loading="lazy"></iframe>
                     <iframe  width="400" height="150" src="https://www.youtube.com/embed/i3rEhNrS6uc?start=76" frameborder="0" loading="lazy"></iframe>
                     <iframe  width="400" height="150" src="https://www.youtube.com/embed/rcxN0GZ7OJw?start=10" frameborder="0" loading="lazy"></iframe>
                 </div>
