--- a/mestres.html
+++ b/mestres.html
@@ -258,7 +258,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/rui.jpg">
+                <img src="https://i.ibb.co/DWYq58b/rui.jpg">
                 <div class="info">
                     <h3>Rui (2009)</h3>
                     <h2>(Beto)</h2>
@@ -278,7 +278,7 @@
             </div>
 
             <div class="box_m">
-                <img src="https://ekladata.com/RRPjTkgy8yXjzciu04hWD-0t5gA@550x743.jpg">
+                <img src="https://i.ibb.co/7ksvVf5/bruzzi.jpg">
                 <div class="info">
                     <h3>Bruzzi (2009)</h3>
                     <h2>(Garrincha)</h2>
@@ -288,7 +288,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/torneiro.jpg">
+                <img src="https://i.ibb.co/NFYdf5t/torneiro.jpg">
                 <div class="info">
                     <h3>Torneiro (2010)</h3>
                     <h2>(Elias)</h2>
@@ -318,7 +318,7 @@
             </div>
 
             <div style="float: left;" class="box_m">
-                <img src="images/jacare.jpg">
+                <img src="https://i.ibb.co/QcfBV7S/jacare.jpg">
                 <div class="info">
                     <h3>Jacaré (2011)</h3>
                     <h2>(Peixinho)</h2>
@@ -409,7 +409,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/caracu.jpg">
+                <img src="https://i.ibb.co/k8wvg70/caracu.jpg">
                 <div class="info">
                     <h3>Caracu (2013)</h3>
                     <h2>(Zumbi)</h2>
@@ -489,7 +489,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/kiura.jpeg">
+                <img src="https://i.ibb.co/8KgSZGn/kiura.jpg">
                 <div class="info">
                     <h3>Kiura (2016)</h3>
                     <h2>(Zumbi)</h2>
@@ -499,7 +499,7 @@
             </div>
 
             <div style="float: left;" class="box_m">
-                <img src="images/cristiane.jpg">
+                <img src="https://i.ibb.co/X2phy9f/cristiane.jpg">
                 <div class="info">
                     <h3>Cristiane (2017)</h3>
                     <h2>(Toni Vargas)</h2>
@@ -509,7 +509,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/gavial.jpg">
+                <img src="https://i.ibb.co/2tjvDTr/gavial.jpg">
                 <div class="info">
                     <h3>Gavial (2017)</h3>
                     <h2>(Flávio)</h2>
@@ -569,7 +569,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/kapacete.jpg">
+                <img src="https://i.ibb.co/GRy2wwQ/kapacete.jp">
                 <div class="info">
                     <h3>Kapacete (2018)</h3>
                     <h2>(Chiquinho)</h2>
@@ -579,7 +579,7 @@
             </div>
 
             <div style="float: left;" class="box_m">
-                <img src="images/camarao.jpg">
+                <img src="https://i.ibb.co/SmN65wn/camarao.jpg">
                 <div class="info">
                     <h3>Camarão (2019)</h3>
                     <h2>(Steen)</h2>
@@ -589,7 +589,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/espiga.jpg">
+                <img src="https://i.ibb.co/B3ztLtd/espiga.jpg">
                 <div class="info">
                     <h3>Espiga (2019)</h3>
                     <h2>(Steen)</h2>
@@ -599,7 +599,7 @@
             </div>
 
             <div style="float: left;" class="box_m">
-                <img src="images/cris silva.jpg">
+                <img src="https://i.ibb.co/vsxzq63/cris-silva.jpg">
                 <div class="info">
                     <h3>Cristina Paris (2019)</h3>
                     <h2>(Torneiro)</h2>
@@ -609,7 +609,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/mestre tyson_edited.jpg">
+                <img src="https://i.ibb.co/vkkQd8j/mestre-tyson-edited.png">
                 <div class="info">
                     <h3>Tyson (2019)</h3>
                     <h2>(Elias)</h2>
@@ -619,17 +619,17 @@
             </div>
 
             <div class="box_m">
-                <img src="https://static.wikia.nocookie.net/capoeira/images/9/9b/Professor_MarkYork.jpg/revision/latest?cb=20061024083200">
+                <img src="https://i.ibb.co/82Q0j3B/mark-york.jpg">
                 <div class="info">
                     <h3>Mark York (2019)</h3>
                     <h2>(Elias)</h2>
-                    <p>Mark York Mendes da Silva, born in Teresopolis, Rio de Janeiro in 1978, began his Capoeira journey in 1995 under the guidance of Mestre Elias. After obtaining various ropes and teaching experience, he left Brazil in 2000 to join instructors in France, where he continued to develop Capoeira in several cities. In 2019, he became a Mestre under the Senzala Group and now leads the work of several advanced students teaching Capoeira in various regions of France, with the aim of sharing Brazilian culture through this art.</p>
+                    <p>Mark York Mendes da Silva, born in Teresopolis, Rio de Janeiro in 1978, began his Capoeira journey in 1995 under the guidance of Mestre Elias. He left Brazil in 2000 to join instructors in France, where he continued to develop Capoeira in several cities.</p>
                     <a href="mark york.html" class="btn">Learn more...</a>
                 </div>
             </div>
 
             <div class="box_m">
-                <img src="images/ja morreo.jpg">
+                <img src="https://i.ibb.co/4MwqXnk/ja-morreo.jpg">
                 <div class="info">
                     <h3>Já Morreu (2019)</h3>
                     <h2>(Elias)</h2>
@@ -639,8 +639,7 @@
             </div>
 
             <div style="float: left;" class="box_m">
-                <img src="images/marcio santos.jpg">
-                <div class="info">
+                <img src="https://i.ibb.co/BK4B5s6/marcio-santos.jpg">
                     <h3>Marcio Santos (2019)</h3>
                     <h2>(Elias)</h2>
                     <p style="display: none;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ab iste quas? Aliquam voluptates dignissimos adipisci officia omnis dolores porro esse commodi eveniet. Laudantium sed dignissimos aliquam inventore eos ad!</p>
@@ -649,7 +648,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/sanhaso.jpg">
+                <img src="https://i.ibb.co/QPwPTdG/sanhaso.jpg">
                 <div class="info">
                     <h3>Sanhaço (2019)</h3>
                     <h2>(Deco)</h2>
