--- a/mestres.html
+++ b/mestres.html
@@ -640,12 +640,14 @@
 
             <div style="float: left;" class="box_m">
                 <img src="https://i.ibb.co/BK4B5s6/marcio-santos.jpg">
+                <div class="info">
                     <h3>Marcio Santos (2019)</h3>
                     <h2>(Elias)</h2>
                     <p style="display: none;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ab iste quas? Aliquam voluptates dignissimos adipisci officia omnis dolores porro esse commodi eveniet. Laudantium sed dignissimos aliquam inventore eos ad!</p>
                     <a style="display: none;" href="#" class="btn">Learn more...</a>
                 </div>
             </div>
+
 
             <div class="box_m">
                 <img src="https://i.ibb.co/QPwPTdG/sanhaso.jpg">
