--- a/mestres.html
+++ b/mestres.html
@@ -120,7 +120,7 @@
             </div>
 
 			<div class="box_m">
-                <img src="images/garrincha (1).jpg">
+                <img src="https://i.ibb.co/7QpZZr4/garrincha-1.png">
                 <div class="info">
                     <h3>Garrincha</h3>
                     <p>Mestre Garrincha is a skilled capoeira practitioner and musician from Rio de Janeiro, Brazil. He became a mestre in 1978 and has taught capoeira all over the world. He is also known for his unique style of playing the berimbau and his proficiency in other martial arts.</p>
