--- a/maculele.html
+++ b/maculele.html
@@ -65,7 +65,7 @@
 		<section class="basic" id="basic">
 
 			<div class="row">
-				<iframe src="videos/maculele/базовый шаг.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://embed.wave.video/fWlbzJr0tpom4mDQ" frameborder="0" loading="lazy"></iframe>
 				<h3>Etapa básica</h3>
 			</div>
 
@@ -85,7 +85,7 @@
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/плохому танцору....mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://embed.wave.video/8jkEIOv0fXLWXEYT" frameborder="0" loading="lazy"></iframe>
 				<h3>Encruzilhada</h3>
 			</div>
 
@@ -135,7 +135,7 @@
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/menina.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://embed.wave.video/ftov62ZV6GvyYIlP" frameborder="0" loading="lazy"></iframe>
 				<h3>Menina</h3>
 			</div>
 
