--- a/quotes.html
+++ b/quotes.html
@@ -120,7 +120,7 @@
             </div>
 
 			<div class="box_m">
-                <img src="images/suassuna.jpg">
+                <img src="https://i.ibb.co/DMg7c9c/suassuna.jpg">
                 <div class="info">
                     <p><i class="fas fa-quote-left">&#10077; A good capoeirista of course likes everything of capoeira: the beats, the berimbau, the game; everything else is secondary. Today a lot of capoeiristas are very arrogant, vain and these are negative aspects. A good capoeirista is humble, polite and he knows that all the other capoeiristas are brothers and human beings. &#10077;</i><i class="fas fa-quote-right"></i></p>
 					<h4>--Mestre Suassuna</h4>
@@ -152,7 +152,7 @@
             </div>
 
 			<div class="box_m">
-                <img src="images/suassuna.jpg">
+                <img src="https://i.ibb.co/DMg7c9c/suassuna.jpg">
                 <div class="info">
 					<p><i class="fas fa-quote-left">&#10077; Today capoeira is one of the fastest growing sports in the world.
                         Only here in my school this year I have already graduated 20
