--- a/garrincha.html
+++ b/garrincha.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/OSpU9wtdfps" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="images/garrincha (1).jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="https://i.ibb.co/7QpZZr4/garrincha-1.png" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/ck7TBc4lyEw" frameborder="0" loading="lazy"></iframe>
             </div>
 
