--- a/beto.html
+++ b/beto.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/MRCrLn1_oC0" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="http://www.capoeira.od.ua/images/pictures/batizado/batizado2010/bat2010-7.jpg" frameborder="0" loading="lazy">
+	                        <img style="margin-top: 2rem;" src="https://i.ibb.co/zQqXVLr/beto.jpg" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/K8F4fvqBYfg" frameborder="0" loading="lazy"></iframe>
             </div>
 
