--- a/feijao.html
+++ b/feijao.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/XVAp1RaotWY" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="images/feijao.jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="https://i.ibb.co/d2wLNvh/feijao.jpg" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/wexya3YL2L4" frameborder="0" loading="lazy"></iframe>
             </div>
 
