--- a/arruda.html
+++ b/arruda.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/-Wh_JOsrVoI?si=tW1buTVrdLas_bJl" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="images/arruda.jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="https://i.ibb.co/vL7tNYv/arruda.jpg" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/UhWg5MDHlnE?si=uaUHhTRkGp8vIHeK" frameborder="0" loading="lazy"></iframe>
             </div>
 
