--- a/bruzzi.html
+++ b/bruzzi.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/egWCH0Ti0c4?si=1wp_ZYDpyIODCXLl" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="https://ekladata.com/RRPjTkgy8yXjzciu04hWD-0t5gA@550x743.jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="https://i.ibb.co/7ksvVf5/bruzzi.jpg" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/WHgSALTSBdg?si=gMAjJLWJKG2nXSXo" frameborder="0" loading="lazy"></iframe>
             </div>
 
