--- a/mestres.html
+++ b/mestres.html
@@ -569,7 +569,7 @@
             </div>
 
             <div class="box_m">
-                <img src="https://i.ibb.co/GRy2wwQ/kapacete.jp">
+                <img src="https://i.ibb.co/GRy2wwQ/kapacete.jpg">
                 <div class="info">
                     <h3>Kapacete (2018)</h3>
                     <h2>(Chiquinho)</h2>
