--- a/basic.html
+++ b/basic.html
@@ -78,7 +78,7 @@
 				<h3>Cords of Senzala</h3>
 				<p>Senzala's reference guide is a comprehensive resource that includes all Capoeira songs, rhythms, movements, maculele, and samba. This guide is a convenient tool for practitioners to access all the necessary information in one place.</p>
 				<p>With this reference guide, Senzala provides a valuable resource that can help Capoeira practitioners deepen their knowledge and skills.</p>
-				<a href="slider.html" class="btn">Learn more...</a>
+				<a href="cords.html" class="btn">Learn more...</a>
 			</div>
 		</div>
 	</section>
