--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 	</section>
 	<!--basic info section ends-->
 	<!--handbook section starts-->
-	<section class="handbook" id="handbook">
+	<section class="basic" id="basic">
 		<h1 style="margin-top: 6rem;" class="heading">Handbook</h1>
-		<div class="hand">
+		<div class="row">
 			<img src="https://i.pinimg.com/564x/cd/39/25/cd3925795e2ec86b4567e21d9611a9e1.jpg">
 			<div class="content">
 				<h3>Useful handbooks will help you to remeber information easier</h3>
@@ -96,9 +96,9 @@
 	</section>
 	<!--handbook section ends-->
 	<!--archives section starts-->
-	<section class="archi" id="archi">
+	<section class="basic" id="basic">
 		<h1 style="margin-top: 6rem;" class="heading">Archives</h1>
-		<div class="arc">
+		<div class="row">
 			<img src="https://i.pinimg.com/564x/d4/8a/5c/d48a5c1f1db7aeb2580a175568a98909.jpg">	
 			<div class="content">
 				<h3>Interesting and rare information in our archives</h3>
@@ -148,3 +148,4 @@
 	<!--footer section ends-->
 </body>
 </html>
+
