--- a/basic.html
+++ b/basic.html
@@ -71,20 +71,20 @@
 	</section>
 	<!--basic info section ends-->
 	<!--handbook section starts-->
-	<section class="basic" id="basic">
+	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="https://i.pinimg.com/564x/16/e2/d4/16e2d499c161a02193021d6a6c963c62.jpg"></div>
 			<div class="content">
 				<h3>Cords of Senzala</h3>
 				<p>Senzala's reference guide is a comprehensive resource that includes all Capoeira songs, rhythms, movements, maculele, and samba. This guide is a convenient tool for practitioners to access all the necessary information in one place.</p>
 				<p>With this reference guide, Senzala provides a valuable resource that can help Capoeira practitioners deepen their knowledge and skills.</p>
-				<a href="cords.html" class="btn">Learn more...</a>
+				<a href="slider.html" class="btn">Learn more...</a>
 			</div>
 		</div>
 	</section>
 	<!--handbook section ends-->
 	<!--archives section starts-->
-	<section class="basic" id="basic">
+	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="https://i.pinimg.com/564x/30/5c/ce/305cce1f89a81f8a6a7c97372d0da02f.jpg"></div>
 			<div class="content">
