--- a/handbook.html
+++ b/handbook.html
@@ -70,7 +70,7 @@
 		</div>
 	</section>
 
-	<section class="basic" id="basic">
+	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="images/rhythms.jpg"></div>
 			<div class="content">
@@ -81,7 +81,7 @@
 		</div>
 	</section>
 
-	<section class="basic" id="basic">
+	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="https://i.pinimg.com/564x/b3/42/6a/b3426af9c32ebfd452919e9b8a7c6327.jpg"></div>
 			<div class="content">
@@ -92,7 +92,7 @@
 		</div>
 	</section>
 
-	<section class="basic" id="basic">
+	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="https://i.pinimg.com/564x/48/10/7f/48107f4686a8da9e598c8624d379346f.jpg"></div>
 			<div class="content">
@@ -103,7 +103,7 @@
 		</div>
 	</section>
 
-	<section class="basic" id="basic">
+	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="https://i.pinimg.com/564x/a5/13/4a/a5134a4c4bda9c8e3e6c9161d5b261da.jpg"></div>
 			<div class="content">
@@ -114,7 +114,7 @@
 		</div>
 	</section>
 
-	<section style="display: none;" class="basic" id="basic">
+	<section style="display: none;" class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="https://i.pinimg.com/564x/eb/01/97/eb0197d2dc8f8f016a3ca24e2e59126c.jpg"></div>
 			<div class="content">
