--- a/archi.html
+++ b/archi.html
@@ -81,7 +81,7 @@
 		</div>
 	</section>
 
-	<section class="basic" id="basic">
+	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="https://i.pinimg.com/736x/da/85/16/da851664308a4817f39c46403b825b94.jpg"></div>
 			<div class="content">
@@ -92,7 +92,7 @@
 		</div>
 	</section>
 
-	<section class="basic" id="basic">
+	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
 			<div class="image"><img src="https://i.pinimg.com/564x/1b/16/74/1b16747e163819c5bb8951a6062eebff.jpg"></div>
 			<div class="content">
