--- a/handbook.html
+++ b/handbook.html
@@ -72,7 +72,7 @@
 
 	<section class="basic" id="basic" style="margin-top: -10rem;">
 		<div class="row">
-			<div class="image"><img src="images/rhythms.jpg"></div>
+			<div class="image"><img src="https://i.ibb.co/rbHDwbq/rhythms.jpg"></div>
 			<div class="content">
 				<h3>Rhythms</h3>
 				<p>This section allows you to familiarize yourself with all the existing rhythms in capoeira and learn to master them by improving your technique through special video tutorials, some of which were recorded for the Senzala group by Master Rui in 2006.</p>
@@ -109,7 +109,7 @@
 			<div class="content">
 				<h3>Maculele</h3>
 				<p>Maculele is an important and beautiful part of capoeira. Here you can find tutorials on all the movements and their descriptions, which will allow you to better understand this dance and delve deeper into the art of capoeira.</p>
-				<a href="#" class="btn">Learn more...</a>
+				<a href="maculele.html" class="btn">Learn more...</a>
 			</div>
 		</div>
 	</section>
