--- a/nega.html
+++ b/nega.html
@@ -125,7 +125,7 @@
      <section class="footer" id="footer">
 
 		<div class="share">
-			<a href="https://t.me/senzala_news"><img style="height: 35px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png"></a>
+			<a href="https://t.me/senzala_news"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png"></a>
 			<a href="https://www.youtube.com/@AnisimIlinskyi8/featured"><img src="https://cdn-icons-png.flaticon.com/512/4494/4494485.png"></a>
 			<a href="https://www.facebook.com/anisim.ilinskyi"><img src="https://cdn-icons-png.flaticon.com/512/174/174848.png"></a>
 			<a href="https://www.instagram.com/anisim_capoeira/"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"></a>
