--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	</section>
 	<!--basic info section ends-->
 	<!--handbook section starts-->
-	<section class="basic" id="basic">
+	<section class="basic" id="handbook">
 		<h1 style="margin-top: 6rem;" class="heading">Handbook</h1>
 		<div class="row">
 			<img src="https://i.pinimg.com/564x/cd/39/25/cd3925795e2ec86b4567e21d9611a9e1.jpg">
@@ -96,7 +96,7 @@
 	</section>
 	<!--handbook section ends-->
 	<!--archives section starts-->
-	<section class="basic" id="basic">
+	<section class="basic" id="archi">
 		<h1 style="margin-top: 6rem;" class="heading">Archives</h1>
 		<div class="row">
 			<img src="https://i.pinimg.com/564x/d4/8a/5c/d48a5c1f1db7aeb2580a175568a98909.jpg">	
