--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<li><a style="margin-left: 0;" href="#basic">Basic Info</a></li>
 						<li><a style="margin-left: 0;" href="#handbook">Handbook</a></li>
 						<li><a style="margin-left: 0;" href="#archi">Archives</a></li>
-						<li><a style="margin-left: 0;" href="#about us">About us</a></li>
+						<li><a style="margin-left: 0;" href="about us.html">About us</a></li>
 						<li><a style="margin-left: 0;" href="#contact">Contacts</a></li>
 					</ul>
 				</li>
