--- a/rhythms.html
+++ b/rhythms.html
@@ -62,7 +62,7 @@
 
             <div class="book">
                 <div class="video">
-                    <iframe src="vhttps://www.youtube.com/embed/-CjhkCFA7hI?si=xGML4QHfY0VqOsgC" frameborder="0" loading="lazy"></iframe>
+                    <iframe src="https://www.youtube.com/embed/-CjhkCFA7hI?si=xGML4QHfY0VqOsgC" frameborder="0" loading="lazy"></iframe>
                     <iframe src="https://www.youtube.com/embed/EBpAWYlvwNQ?si=Ww3ZUa1g5sWFcaq5" frameborder="0" loading="lazy"></iframe>
                     <iframe src="https://www.youtube.com/embed/ZwGESnLM2lU?si=mYnRBvQKaITfj9Co" frameborder="0" loading="lazy"></iframe>
                 </div>
