--- a/films.html
+++ b/films.html
@@ -43,25 +43,25 @@
                 </li>
                 <li><a href="about us.html">About us</a></li>
                 <li><a style="margin-right: 3rem;" href="contacts.html">Contacts</a></li>
-                <li class="menu-btn"><a style="border-bottom: none;"  href="#"><img src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
-                    <ul>
-                        <li><a style="margin-left: 0;" href="index.html">Home</a></li>
-                        <li><a style="margin-left: 0;" href="basic.html">Basic Info</a></li>
-                        <li><a style="margin-left: 0;" href="handbook.html">Handbook</a></li>
-                        <li><a style="margin-left: 0;" href="archi.html">Archives</a></li>
-                        <li><a style="margin-left: 0;" href="about us.html">About us</a></li>
-                        <li><a style="margin-left: 0;" href="contacts.html">Contacts</a></li>
-                    </ul>
-                </li>
+                <li class="menu-btn"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
+					<ul>
+						<li><a style="margin-left: 0;" href="index.html">Home</a></li>
+						<li><a style="margin-left: 0;" href="basic.html">Basic Info</a></li>
+						<li><a style="margin-left: 0;" href="handbook.html">Handbook</a></li>
+						<li><a style="margin-left: 0;" href="archi.html">Archives</a></li>
+						<li><a style="margin-left: 0;" href="about us.html">About us</a></li>
+						<li><a style="margin-left: 0;" href="contacts.html">Contacts</a></li>
+					</ul>
+				</li>
             </ul>
         </nav>
     </header>
 
     <section id="docs">
         <h1 class="heading"><span>Capoeira</span> Movies</h1>
-        <div class="film-list">
+        <div class="book-list">
 
-            <div class="film">
+            <div class="book">
                 <img src="https://static.hdrezka.ac/i/2016/7/5/yeeca40b75dc3ao18d65b.jpg">
                 <div class="content">
                     <h2>Besouro</h2>
@@ -70,7 +70,7 @@
                 </div>
             </div>
 
-            <div class="film">
+            <div class="book">
                 <img src="https://m.media-amazon.com/images/M/MV5BYzQ4ODBhODQtNmI3OS00ODI5LWE4MzgtMzg4NTNjMDhmZjYyXkEyXkFqcGdeQXVyNjc2MDQ1OTk@._V1_QL75_UY281_CR3,0,190,281_.jpg">
                 <div class="content">
                     <h2>Mestre Bimba - A Capoeira Iluminada</h2>
@@ -79,7 +79,7 @@
                 </div>
             </div>
 
-            <div class="film">
+            <div class="book">
                 <img src="images/rooftops.jpg">
                 <div class="content">
                     <h2>Rooftops</h2>
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <div class="film">
+            <div class="book">
                 <img src="https://m.media-amazon.com/images/M/MV5BNDAxYzExZmYtMzg3OS00Y2NmLWI5NDgtZDE0YWE2ZWQxNDRkXkEyXkFqcGdeQXVyNDY2NDMxNDY@._V1_.jpg">
                 <div class="content">
                     <h2>Cordão de Ouro</h2>
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-            <div class="film">
+            <div class="book">
                 <img src="https://images.justwatch.com/poster/301098912/s592/only-the-strong">
                 <div class="content">
                     <h2>Only the Strong</h2>
