--- a/cords.html
+++ b/cords.html
@@ -80,7 +80,7 @@
                     <img src="https://i.ibb.co/SQVF6cV/corda-branco.jpg" class="cordas">
 					<div class="hidden">
 						<h3>Corda Branco</h3>
-					    <p class="hidden">The white belt in the Senzala system represents the initial level, where the student should have a basic understanding of capoeira, know the fundamental principles and movements, but is not necessarily required to perform them perfectly or flawlessly. This belt signifies that the student is just beginning their journey in capoeira and continues to develop, deepen their skills, and improve their performance as they learn and practice.</p>
+					    <p class="hidden">The white belt in the Senzala system represents the initial level, where the student should have a basic understanding of capoeira, know the fundamental principles and movements, but is not necessarily required to perform them perfectly. This belt signifies that the student is just beginning their journey in capoeira and continues to develop, deepen their skills, and improve their performance as they learn and practice.</p>
 					</div>
                 </div>
                 <a href="#slider1" class="button" id="button1"></a>
@@ -91,7 +91,7 @@
                     <img src="https://i.ibb.co/S7zXvsz/corda-amarella.jpg" class="cordas">
 					<div class="hidden">
 						<h3>Corda Amarella</h3>
-					    <p class="hidden">The yellow belt is awarded to a student after a certain period of training, signifying that they have developed a solid understanding of and can proficiently execute fundamental strikes, acrobatics, and techniques. They also demonstrate a good grasp of and can effectively incorporate esquivas into their capoeira practice. This belt represents a significant advancement in their capoeira journey and reflects their ability to perform these core elements with competence and skill.</p>
+					    <p class="hidden">The yellow belt is awarded to a student after a certain period of training, signifying that they have developed a solid understanding of and can proficiently execute fundamental strikes, acrobatics, and techniques. They also demonstrate a good grasp of and can effectively incorporate esquivas into their capoeira practice.</p>
 					</div>
                 </div>
                 <a href="#slider2" class="button" id="button2"></a>
@@ -102,7 +102,7 @@
                     <img src="https://i.ibb.co/gJ6FQSb/corda-laranja.jpg" class="cordas">
 					<div class="hidden">
 						<h3>Corda Laranja</h3>
-					    <p class="hidden">The orange belt signifies an elevation in a student's capoeira proficiency, indicating their ability to perform more intricate movements. As a result, the game becomes more engaging and challenging for both the student and their opponent. To attain this belt, a student must demonstrate their agility, swiftly moving while avoiding direct contact with their adversary. This level reflects a notable improvement in the student's capoeira skills and adds a new layer of complexity to their gameplay.</p>
+					    <p class="hidden">The orange belt signifies an elevation in a student's capoeira proficiency, indicating their ability to perform more intricate movements. As a result, the game becomes more engaging and challenging for both the student and their opponent. To attain this belt, a student must demonstrate their agility, swiftly moving while avoiding direct contact with their adversary.</p>
 					</div>
                 </div>
                 <a href="#slider3" class="button" id="button3"></a>
@@ -157,7 +157,7 @@
                     <img src="https://i.ibb.co/sFqnbZf/corda-marrom.jpg" class="cordas">
 					<div class="hidden">
 						<h3>Corda Marrom</h3>
-					    <p class="hidden">The brown belt, known as the "Contra-Mestre" belt, is considered one of the highest levels in capoeira. To achieve this belt, one must dedicate over twenty years to training and have an almost perfect mastery of capoeira. This includes a deep understanding of the nuances of the game, a profound knowledge of musical instruments, and an exceptional level of expertise in capoeira. Earning the Contra-Mestre belt signifies a remarkable commitment to the art and a profound level of knowledge and skill.</p>
+					    <p class="hidden">The brown belt, known as the "Contra-Mestre" belt, is considered one of the highest levels in capoeira. To achieve this belt, one must dedicate over twenty years to training and have an almost perfect mastery of capoeira. This includes a deep understanding of the nuances of the game, a profound knowledge of musical instruments, and an exceptional level of expertise in capoeira.</p>
 					</div>
                 </div>
                 <a href="#slider8" class="button" id="button8"></a>
@@ -168,7 +168,7 @@
                     <img src="https://i.ibb.co/tht1Mgy/corda-vermelha.jpg" class="cordas">
 					<div class="hidden">
 						<h3>Corda Vermelha</h3>
-					    <p class="hidden">The red belt signifies the level of a Master in the Senzala school. To attain this belt, a student must possess an impeccable understanding and mastery of capoeira, have experience in teaching, be well-versed in the history and intricacies of their school, and actively contribute to its development. Achieving the title of Master is the ultimate goal for every capoeirista and requires an incredible amount of dedication and effort. It represents the highest level of expertise and commitment within the art of capoeira.</p>
+					    <p class="hidden">The red belt signifies the level of a Master in the Senzala school. To attain this belt, a student must possess an impeccable understanding and mastery of capoeira, have experience in teaching, be well-versed in the history and intricacies of their school, and actively contribute to its development. Achieving the title of Master is the ultimate goal for every capoeirista and requires an incredible amount of dedication and effort.</p>
 					</div>
                 </div>
                 <a href="#slider9" class="button" id="button9"></a>
