--- a/maculele.html
+++ b/maculele.html
@@ -65,102 +65,102 @@
 		<section class="basic" id="basic">
 
 			<div class="row">
-				<iframe src="https://embed.wave.video/fWlbzJr0tpom4mDQ" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/aPDpDdy2GcE?si=A01wxHwl3nfyE36B" frameborder="0" loading="lazy"></iframe>
 				<h3>Etapa básica</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/reversao.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/Tpb3oFFbX84?si=p_mNMTXkRmvhNE0Q" frameborder="0" loading="lazy"></iframe>
 				<h3>Reversão</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="https://player.vimeo.com/video/886410896?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/W7sHIdYYDJY?si=khFVgwYADJWjDQmh" frameborder="0" loading="lazy"></iframe>
 				<h3>Asas</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/posando.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/9sYN3MFEKog?si=EQQkM74AU1tPpzq1" frameborder="0" loading="lazy"></iframe>
 				<h3>Posando</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="https://embed.wave.video/8jkEIOv0fXLWXEYT" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/xUO-lQz573g?si=RvKHIBVDRc6FHKfA" frameborder="0" loading="lazy"></iframe>
 				<h3>Encruzilhada</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/metade.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/l3k7wGUI-VM?si=W7-Jy-DWGp_-DVbI" frameborder="0" loading="lazy"></iframe>
 				<h3>Metade</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="https://assets.pinterest.com/ext/embed.html?id=963277807782972545" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/_FVj2Mvfghg?si=jL-Vz7naamOTVExt" frameborder="0" loading="lazy"></iframe>
 				<h3>Batismo</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/xama.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/nxamGwdF824?si=p5-mxs5eSyUGAqMq" frameborder="0" loading="lazy"></iframe>
 				<h3>Xamã</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="https://player.vimeo.com/video/886413205?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/khh78bFj0T4?si=q37gGowMMlZODI5x" frameborder="0" loading="lazy"></iframe>
 				<h3>Arco</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="https://www.veed.io/embed/638d5165-3a6f-4ffc-897c-1951677c6ef5" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/IUMJUOtztO4?si=gKCJqFPGTi92cNkH" frameborder="0" loading="lazy"></iframe>
 				<h3>Pião</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/cancan.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/cC2r-AKnBqc?si=n1pRB-8BGmzHli54" frameborder="0" loading="lazy"></iframe>
 				<h3>Cancan</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/indiano.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/Zzqe-o5fwgM?si=-bHpWtqxJXutoMNA" frameborder="0" loading="lazy"></iframe>
 				<h3>Indiano</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/conan.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/ZTSGizd3czU?si=ctUs8ahyQ9_8Kgrm" frameborder="0" loading="lazy"></iframe>
 				<h3>Conan</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/voltar.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/PkcBGg_OVXE?si=wdbngZJbhK4oJqwb" frameborder="0" loading="lazy"></iframe>
 				<h3>Voltar</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="https://embed.wave.video/ftov62ZV6GvyYIlP" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/N3m4g74ZxZE?si=-q9tshzWXXf-OuKv" frameborder="0" loading="lazy"></iframe>
 				<h3>Menina</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/indiana.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/yq8vEMum1jA?si=88hi_Xp9opvcfUnM" frameborder="0" loading="lazy"></iframe>
 				<h3>Indiana</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/piramide.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/mYOE7UGQlFc?si=2idv2rdY29clWDuO" frameborder="0" loading="lazy"></iframe>
 				<h3>Pirâmide</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/estrela.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/38yLyfUFgE4?si=_gDFtpsked48zqYX" frameborder="0" loading="lazy"></iframe>
 				<h3>Estrela</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="videos/maculele/hopak.mp4" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/81NfKu41R14?si=xo2ABqoYpXHJYAge" frameborder="0" loading="lazy"></iframe>
 				<h3>Hopak</h3>
 			</div>
 
 			<div class="row">
-				<iframe src="https://assets.pinterest.com/ext/embed.html?id=963277807782972531" frameborder="0" loading="lazy"></iframe>
+				<iframe src="https://www.youtube.com/embed/2Lq8hAbBEb0?si=LVz_Nwpm05v4KfBT" frameborder="0" loading="lazy"></iframe>
 				<h3>Bandeira</h3>
 			</div>
 
